css/styles.css
/* ----- BASE -------------------------------------- */

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    background-color: #ffffff;
    color: #434455;
}

a {
    text-decoration: none;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

ul {
    list-style: none;
    margin: 0;
    padding-left: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
}

p {
    margin: 0;
}

h1 {
    font-weight: 700;
    font-size: 56px;
    line-height: 1.07;
    color: #ffffff;
    text-align: center;
    letter-spacing: 0.02em;
}

h2 {
    font-weight: 700;
    font-size: 36px;
    line-height: 1.11;
    color: #2E2F42;
    letter-spacing: 0.02em;
}

h3 {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
    color: #2E2F42;
    letter-spacing: 0.02em;
}

h2 {
    padding: 0 0 72px 0;
}

img {
    display: block;
}

/* ----- COMMON ---------------------------------------- */

.container {
    max-width: 1158px;
    padding: 0 15px;
    margin: 0 auto;
}

.button {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    color: #ffffff;
    background-color: #4D5AE5;
    cursor: pointer;
    letter-spacing: 0.04em;
    border-radius: 4px;
    padding: 16px 32px;
    display: block;
    margin: 48px auto 0 auto;
    border: none;
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
}

.button:hover,
.button:focus {
    background-color: #404BBF
}

/* ----- HEADER --------------------------------------- */

.header-flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header {
    border-bottom: 1px solid #E7E9FC;
}

.left-side {
    display: flex;
    align-items: center;
    gap: 76px;
}

.logo {
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.03em;
    line-height: 1.17;
    display: flex;
    flex-wrap: wrap;
}

.logo span {
    color: #4D5AE5;
}

.header-logo-link {
    color: #2E2F42;
    padding: 24px 0;
}

.nav-list {
    display: flex;
    gap: 40px;
}

.link-nav {
    font-weight: 500;
    color: #2E2F42;
    padding: 24px 0;
}

.link-nav:hover,
.link-nav:focus,
.link-address:hover,
.link-address:focus {
    color: #404BBF
}

.link-nav:active {
    text-decoration: underline;
    color: #404BBF
}

.address-list {
    display: flex;
    gap: 40px;
}

.link-address {
    color: #434455;
    font-weight: 400;
    padding: 24px 0;
}

address {
font-style: normal;
}

/* ----- HERO ------------------------------------- */

.hero {
    background-color: #2E2F42;
    padding-bottom: 188px;
}

.hero-title {
    padding-top: 188px;
    margin: 0 auto;
    width: 496px;
}

/* ----- FEATURES --------------------------------- */

.card-set-features {
    display: flex;
    justify-content: center;
    gap: 24px;
    margin: 120px auto;
}

.card-features {
    max-width: 264px;
}

/* ----- TEAM ----------------------------------- */

.team {
    background-color: #F4F4FD;
    padding: 120px 0;
}

.card-set-team {
    display: flex;
    justify-content: center;
    gap: 24px;
}

.team-card {
    background-color: #FFFFFF;
    border-radius: 0 0 4px 4px;
    box-shadow:
        0 1px 6px rgba(46, 47, 66, 0.08),
        0 1px 1px rgba(46, 47, 66, 0.16),
        0 2px 1px rgba(46, 47, 66, 0.08);
}

.team-card-fill {
    padding-top: 32px;
    padding-bottom: 32px;
}

.team-card-title {
    margin-bottom: 8px;
}

.team-card-text,
.team-title,
.team-card-title {
    text-align: center;
}

/* ----- PORTFOLIO --------------------------------- */

.portfolio {
    padding: 120px 0;
}

.portfolio-title {
    text-align: center;
}

.card-set-portfolio {
    display: flex;
    flex-wrap: wrap;
    gap: 48px 24px;
}

.portfolio-card-fill {
    border: 1px solid #E7E9FC;
    border-top: none;
    padding: 32px 16px;
}

.portfolio-card-title {
    margin-bottom: 8px;
}

.card-set-portfolio li {
    width: calc((100% - 48px) / 3);
}

/* ----- FOOTER ----------------------------------- */

footer {
    background-color: #2E2F42;
    color: #F4F4FD;
    padding-top: 100px;
    padding-bottom: 100px;
}

footer .logo a {
    color: #F4F4FD;
}

.footer-text {
    max-width: 264px;
    margin-top: 16px;
}

